tests/NormalTests/paczka2/big_fuzzy/70117035.err
Error in line 14: GXdO A759 413,4
Error in line 34: ezOAkQJ9mRI A812 7,0
Error in line 36: S144 A812 42,4
Error in line 16: xr0J1umkWB A759 451,4
Error in line 40: xr0J1umkWB A338 96,3
Error in line 50: ezOAkQJ9mRI A338 17,8
Error in line 51: ezOAkQJ9mRI S144 23,9
Error in line 56: xr0J1umkWB A759 72,3
Error in line 59: xr0J1umkWB S144 55,4
Error in line 37: 70luYa S144 284,3
Error in line 62: GXdO A338 75,0
Error in line 58: 7L7L3R A759 86,2
Error in line 86: 70luYa A759 26,1
Error in line 90: S144 S144 94,6
Error in line 104: 70luYa S144 186,68
Error in line 105: S144 A812 -1,4
Error in line 102: xr0J1umkWB S144 13,9
Error in line 111: 7L7L3R A812 -3,6
Error in line 114: CO21lXkGE A812 225,7
Error in line 115: CO21lXkGE A338 1,8
Error in line 119: 7L7L3R A338 26,6
Error in line 95: S144 A812 30,0
Error in line 130: CO21lXkGE S144 9,0
Error in line 134: CO21lXkGE A812 25,80
Error in line 138: ezOAkQJ9mRI A338 90,6
Error in line 142: GXdO S144 32,5
Error in line 163: xr0J1umkWB S144 10,1
Error in line 170: xr0J1umkWB A812 88,3
Error in line 188: 7L7L3R A338 78,3
Error in line 194: 7L7L3R A759 70,4
Error in line 195: GXdO S144 206,4
Error in line 219: xr0J1umkWB A338 16,3
Error in line 204: S144 A812 106,4
Error in line 235: S144 S144 3,3
